--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,9 +21,14 @@ spring:
           predicates:
             - Path=/ead-notification/**
 
+ead:
+  serviceRegistry:
+    username: serviceRegistry
+    password: 'ead123sr'
+
 eureka:
   client:
     serviceUrl:
-      defaultZone: 'http://localhost:8761/eureka'
+      defaultZone: 'http://${ead.serviceRegistry.username}:${ead.serviceRegistry.password}@localhost:8761/eureka'
   instance:
     hostname: localhost
